monitoring/grafana-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService 
metadata:
  name: grafana-vs #게이트웨이를 통과한 트래픽을 특정 서비스로 라우팅하는 규칙을 정의 
  namespace: monitoring
spec:
  hosts:
  - "grafana.kubox.shop"
  gateways:
  - grafana-gateway #위에서 설정한 gateway, 내가 처리할 요청은 여기서 들어온 요청이다. 
  http:
  - route:
    - destination:
        host: prometheus-grafana.monitoring.svc.cluster.local #cluster ip 서비스의 주소 
        port:
          number: 80
