monitoring/kiali-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kiali-gateway
  namespace: monitoring
spec:
  selector:
    istio: ingressgateway  # Istio ingress gateway 선택
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "kiali.kubox.shop"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: monitoring
spec:
  hosts:
  - "kiali.kubox.shop"
  gateways:
  - kiali-gateway
  http:
  - route:
    - destination:
        host: kiali.monitoring.svc.cluster.local
        port:
          number: 20001
